--- a/sass/layout/_container.scss
+++ b/sass/layout/_container.scss
@@ -10,18 +10,27 @@
   margin: 0 auto;
 
   background-color: color('white');
+  box-shadow: 0 5px 15px 0 rgba(0, 1, 1, 0.2);
 }
 
 .obertka {
   width: 400px;
-  color: color('white');
-  background-color: color('blue');
 
-  margin: 0;
-  padding: 47px 49px;
+  margin: 47px 50px 40px;
+  padding: 0;
 
   h2 {
     font-size: 21px;
+    margin: 0;
+    padding: 0;
+    margin-bottom: 23px;
+  }
+  span {
+
+  }
+  p {
+    margin-top: 22px;
+    padding: 0;
   }
 
 }
