--- a/sass/main.scss
+++ b/sass/main.scss
@@ -11,6 +11,7 @@
 
 @import "components/button";
 @import "components/form";
+@import "components/modal";
 
 @import "pages/index";
 @import "pages/inner-page";
