--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -27,3 +27,47 @@
     }
   }
 }
+
+.filter {
+  display: flex;
+
+  background-color: #ffffff;
+  background-image: url("../img/filter-bg.jpg");
+  background-position: top center;
+  background-repeat: no-repeat;
+
+  fieldset {
+    border: none;
+    margin: 0;
+    padding: 0;
+  }
+  legend {
+    font-weight: 700;
+    font-size: 16px;
+  }
+  ul {
+    li {
+      padding: 0;
+      margin: 0;
+      margin-bottom: 30px;
+    }
+  }
+  .filter-infrastructure {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+  }
+  .filter-quarters-type {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+  }
+  .cost-per-day-filter {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+  }
+  .cost-per-day-field {
+
+  }
+}
