--- a/sass/layout/_container.scss
+++ b/sass/layout/_container.scss
@@ -8,6 +8,7 @@
 .container {
   width: 1200px;
   margin: 0 auto;
+  padding: 0 75 0;
 
   background-color: color('white');
   box-shadow: 0 5px 15px 0 rgba(0, 1, 1, 0.2);
