--- a/static/css/main.css
+++ b/static/css/main.css
@@ -215,6 +215,8 @@ input[type="radio"].visually-hidden {
     list-style: none;
     margin: 0;
     padding: 0; }
+  .filter .cost-per-day-field {
+    margin-left: auto; }
 
 .modal-appointment {
   background-color: #ffffff; }
