--- a/sass/layout/_container.scss
+++ b/sass/layout/_container.scss
@@ -8,7 +8,6 @@
 .container {
   width: 1200px;
   margin: 0 auto;
-  padding: 0 75 0;
 
   background-color: color('white');
   box-shadow: 0 5px 15px 0 rgba(0, 1, 1, 0.2);
@@ -17,13 +16,12 @@
 .obertka {
   width: 400px;
 
-  margin: 47px 50px 40px;
-  padding: 0;
+  margin: 47px 55px 40px;
 
   h2 {
     font-size: 21px;
     margin: 0;
-    padding: 0;
+    padding: 0 40px;
     margin-bottom: 23px;
   }
   span {
