--- a/sass/pages/_index.scss
+++ b/sass/pages/_index.scss
@@ -1,5 +1,5 @@
 .welcome-banner {
-  margin-bottom: 60px;
+  margin-bottom: 58px;
 
   width: 100%;
   height: 509px;
@@ -36,6 +36,12 @@
   display: flex;
   color: color('white');
   background-color: color('blue');
+
+  .obertka {
+    h2 {
+      padding: 0 70px;
+    }
+  }
 
 }
 
@@ -108,11 +114,21 @@
   color: color('white');
   background-color: color('blue');
 
+  .obertka {
+    margin: 47px 45px 40px;
+    h2 {
+      padding: 0 80px;
+    }
+    p {
+      padding: 0;
+    }
+  }
+
 }
 
 .intro-other {
   background-color: color('bg-white');
-  margin-bottom: 60px;
+  margin-bottom: 48px;
 
   .intro-other-items {
     display: flex;
@@ -122,13 +138,16 @@
 
     li {
       width: 400px;
-      padding: 47px 70px;
+      padding: 50px 68px 60px;
 
       h3 {
         font-size: 21px;
+        margin-bottom: 25px;
+        padding: 0 55px;
       }
       p {
         color: color('gray');
+        margin-top: 20px;
       }
     }
   }
@@ -139,11 +158,12 @@
   h2 {
     font-size: 30px;
     line-height: 36px;
+    margin-bottom: 28px;
   }
   p {
     color: color('gray');
     line-height: 24px;
-    margin-bottom: 35px;
+    margin-bottom: 43px;
   }
 
 }
