--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -52,6 +52,9 @@
       margin-bottom: 30px;
     }
   }
+  .filter-field-infrastructure {
+    margin-left: 72px;
+  }
   .filter-infrastructure {
     list-style: none;
     margin: 0;
