--- a/sass/layout/_main_nav.scss
+++ b/sass/layout/_main_nav.scss
@@ -20,7 +20,11 @@
     list-style: none;
 
     li {
-      padding: 15px 70px;
+      padding: 15px 70px 15px 70px;
+
+      &:first-child {
+        padding: 15px 70px 15px 72px;
+      }
 
       &:nth-child(3) {
         margin-left: auto;
