--- a/static/css/main.css
+++ b/static/css/main.css
@@ -299,7 +299,8 @@ body {
   font-weight: 400;
   color: #000000;
   text-transform: uppercase;
-  text-align: center; }
+  text-align: center;
+  background-color: #f2f2f2; }
 
 a {
   text-decoration: none; }
@@ -345,12 +346,6 @@ input[type="radio"].visually-hidden {
     .main-footer .developer span {
       margin-right: 6px; }
 
-.container-big {
-  width: 1280px;
-  margin: 0;
-  padding: 0;
-  background-color: #f2f2f2; }
-
 .container {
   width: 1200px;
   margin: 0 auto;
@@ -394,7 +389,9 @@ input[type="radio"].visually-hidden {
   padding: 0;
   list-style: none; }
   .main-navigation .site-navigation li {
-    padding: 15px 70px; }
+    padding: 15px 70px 15px 70px; }
+    .main-navigation .site-navigation li:first-child {
+      padding: 15px 70px 15px 72px; }
     .main-navigation .site-navigation li:nth-child(3) {
       margin-left: auto; }
     .main-navigation .site-navigation li .site-navigation-current {
@@ -492,6 +489,8 @@ input[type="radio"].visually-hidden {
     padding: 0;
     margin: 0;
     margin-bottom: 30px; }
+  .filter .filter-field-infrastructure {
+    margin-left: 72px; }
   .filter .filter-infrastructure {
     list-style: none;
     margin: 0;
@@ -655,12 +654,9 @@ input[type="radio"].visually-hidden {
   line-height: 24px;
   margin-bottom: 43px; }
 
-.inner-page .filter {
-  padding-left: 72px; }
-
 .inner-page .sorting {
   display: flex;
-  padding-left: 72px; }
+  margin-left: 72px; }
   .inner-page .sorting span {
     font-size: 21px;
     line-height: 26px;
@@ -671,3 +667,6 @@ input[type="radio"].visually-hidden {
     font-weight: 400; }
   .inner-page .sorting ul {
     list-style: none; }
+
+.inner-page .results {
+  margin-left: 72px; }
