--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -28,92 +28,89 @@
   }
 }
 
-.filter {
-  display: flex;
+.filters {
+  margin-bottom: 31px;
+  .filter {
+    display: flex;
 
-  color: color('white');
+    color: color('white');
 
-  background-color: #ffffff;
-  background-image: url("../img/filter-bg.jpg");
-  background-position: top center;
-  background-repeat: no-repeat;
-
-  fieldset {
-    border: none;
-    margin: 0;
-    padding: 0;
-  }
-
-  legend {
-    font-weight: 700;
-    font-size: 16px;
-    margin-bottom: 25px;
-    text-align: left;
-  }
-
-  ul {
-
-    li {
+    background-color: #ffffff;
+    background-image: url("../img/filter-bg.jpg");
+    background-position: top center;
+    background-repeat: no-repeat;
+    fieldset {
+      border: none;
+      margin: 0;
+      padding: 0;
+    }
+    legend {
+      font-weight: 700;
+      font-size: 16px;
+      margin-bottom: 25px;
+      text-align: left;
+    }
+    .filter-option {
       padding: 0;
       margin: 0;
       margin-bottom: 23px;
+      position: relative;
+      padding-left: 40px;
+      text-align: left;
+    }
+    .filter-field-infrastructure {
+      margin-left: 71px;
 
-      label {
+      .filter-infrastructure {
+        list-style: none;
+        margin: 0;
+        padding: 0;
+      }
+    }
+    .filter-field-quarters {
+      margin-left: 125px;
+      .filter-quarters-type {
+        list-style: none;
+        margin: 0;
+        padding: 0;
+      }
+    }
+    .cost-per-day-field {
+      margin-left: auto;
+      margin-right: 74px;
 
+      legend {
+        margin-bottom: 11px;
+      }
+
+      .cost-per-day-filter {
+        display: flex;
+        list-style: none;
+        margin: 0;
+        padding: 0;
+        border: 2px solid color('white');
+        width: 320px;
+
+        .filter-option-cost {
+          width: 160px;
+          position: relative;
+
+          input:focus {
+            background-color: yellow;
+          }
+
+          &:first-child::after {
+            content: '';
+            position: absolute;
+            left: 100%;
+            top: 3px;
+            bottom: 3px;
+            width: 2px;
+            background: color('white');
+          }
+        }
       }
     }
   }
 
-  ul > .filter-option {
-    position: relative;
-    padding-left: 40px;
-    text-align: left;
-  }
-
-  .filter-field-infrastructure {
-    margin-left: 71px;
-  }
-
-  .filter-infrastructure {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-  }
-
-  .filter-field-quarters {
-    margin-left: 125px;
-
-    .filter-quarters-type {
-      list-style: none;
-      margin: 0;
-      padding: 0;
-    }
-  }
-  .cost-per-day-field {
-    margin-left: auto;
-    margin-right: 74px;
-
-    legend {
-      margin-bottom: 11px;
-    }
-
-  .cost-per-day-filter {
-    display: flex;
-
-    list-style: none;
-
-    margin: 0;
-    padding: 0;
-    height: 32px;
-    border: 2px solid color('white');
-
-    li:first-child {
-      border-right: ;
-    }
-
-    .filter-option-cost {
-      width: 160px;
-    }
-  }
-  }
 }
