--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -90,13 +90,18 @@
         padding: 0;
         border: 2px solid color('white');
         width: 320px;
+        margin-bottom: 22px;
+
 
         .filter-option-cost {
           width: 160px;
           position: relative;
 
           input:focus {
-            background-color: yellow;
+          }
+          .filter-input {
+            text-align: center;
+            height: 32px;
           }
 
           &:first-child::after {
@@ -110,7 +115,41 @@
           }
         }
       }
+      .slider-container {
+        margin-bottom: 34px;
+        padding: 0;
+        margin: 0;
+      }
     }
   }
-
 }
+
+/*.slider-container, .slider-container *
+{
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
+.slider-container {
+  position: relative; width: 160px; height: 28px; margin: 16px;
+  border: 1px solid #ddd; font-family: monospace;
+}
+.slider-container > hr { position: absolute; width: 100%; top: 50%; }
+.slider-container > input[type=range] {
+  width: calc(100% - 16px);
+  position: absolute; bottom: 6px; left: 0;
+}
+.slider-container > input[type=range]:last-of-type { margin-left: 16px; }
+.slider-container > input[type=range]::-webkit-slider-thumb { transform: translateY(-18px); }
+.slider-container > input[type=range]::-webkit-slider-runnable-track { -webkit-appearance: none; height: 0px; }
+.slider-container > input[type=range]::-moz-range-thumb { transform: translateY(-18px); }
+.slider-container > input[type=range]::-moz-range-track { -webkit-appearance: none; height: 0px; }
+.slider-container > input[type=range]::-ms-thumb { transform: translateY(-18px); }
+.slider-container > input[type=range]::-ms-track { -webkit-appearance: none; height: 0px; }
+.slider-container::after {
+  content: attr(data-lbound) ' - ' attr(data-ubound);
+  position: absolute; top: 0; left: 100%; white-space: nowrap;
+  display: block; padding: 0px 4px; margin: -1px 2px;
+  height: 26px; width: auto; border: 1px solid #ddd;
+  font-size: 13px; line-height: 26px;
+}*/
