--- a/static/css/main.css
+++ b/static/css/main.css
@@ -523,12 +523,14 @@ input[type="radio"].visually-hidden {
         margin: 0;
         padding: 0;
         border: 2px solid #ffffff;
-        width: 320px; }
+        width: 320px;
+        margin-bottom: 22px; }
         .filters .filter .cost-per-day-field .cost-per-day-filter .filter-option-cost {
           width: 160px;
           position: relative; }
-          .filters .filter .cost-per-day-field .cost-per-day-filter .filter-option-cost input:focus {
-            background-color: yellow; }
+          .filters .filter .cost-per-day-field .cost-per-day-filter .filter-option-cost .filter-input {
+            text-align: center;
+            height: 32px; }
           .filters .filter .cost-per-day-field .cost-per-day-filter .filter-option-cost:first-child::after {
             content: '';
             position: absolute;
@@ -537,7 +539,40 @@ input[type="radio"].visually-hidden {
             bottom: 3px;
             width: 2px;
             background: #ffffff; }
+      .filters .filter .cost-per-day-field .slider-container {
+        margin-bottom: 34px;
+        padding: 0;
+        margin: 0; }
 
+/*.slider-container, .slider-container *
+{
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
+.slider-container {
+  position: relative; width: 160px; height: 28px; margin: 16px;
+  border: 1px solid #ddd; font-family: monospace;
+}
+.slider-container > hr { position: absolute; width: 100%; top: 50%; }
+.slider-container > input[type=range] {
+  width: calc(100% - 16px);
+  position: absolute; bottom: 6px; left: 0;
+}
+.slider-container > input[type=range]:last-of-type { margin-left: 16px; }
+.slider-container > input[type=range]::-webkit-slider-thumb { transform: translateY(-18px); }
+.slider-container > input[type=range]::-webkit-slider-runnable-track { -webkit-appearance: none; height: 0px; }
+.slider-container > input[type=range]::-moz-range-thumb { transform: translateY(-18px); }
+.slider-container > input[type=range]::-moz-range-track { -webkit-appearance: none; height: 0px; }
+.slider-container > input[type=range]::-ms-thumb { transform: translateY(-18px); }
+.slider-container > input[type=range]::-ms-track { -webkit-appearance: none; height: 0px; }
+.slider-container::after {
+  content: attr(data-lbound) ' - ' attr(data-ubound);
+  position: absolute; top: 0; left: 100%; white-space: nowrap;
+  display: block; padding: 0px 4px; margin: -1px 2px;
+  height: 26px; width: auto; border: 1px solid #ddd;
+  font-size: 13px; line-height: 26px;
+}*/
 .modal-appointment {
   background-color: #ffffff; }
 
