--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -3,11 +3,11 @@
 
 //Цвета
 $colors: (
-  'white': #ffffff,
-  'black': #000000,
+  'white': #fff,
+  'black': #000,
   'textfield-container': #f2f2f2,
   'textfield-hover': #ebebeb,
-  'bg-white': #eeeeee,
+  'bg-white': #eee,
   'blue': #81b3d2,
   'blue-hover': #669ec0,
   'blue-active': #5496bd,
@@ -15,7 +15,7 @@ $colors: (
   'brown-hover': #604e43,
   'brown-active': #503e33,
   'footer-white': #f9fbf6,
-  'gray': #333333,
+  'gray': #333,
   'shadow-cont': #000101,
   'nav-current': #766357
 );
