--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -49,18 +49,16 @@
     }
 
     legend {
-      font-weight: 700;
+      font-weight: bold;
       font-size: 16px;
       margin-bottom: 25px;
       text-align: left;
     }
 
     .filter-option {
-      padding: 0;
-      margin: 0;
-      margin-bottom: 23px;
+      margin: 0 0 23px;
       position: relative;
-      padding-left: 40px;
+      padding: 0 0 0 40px;
       text-align: left;
     }
 
@@ -95,11 +93,10 @@
       .cost-per-day-filter {
         display: flex;
         list-style: none;
-        margin: 0;
         padding: 0;
         border: 2px solid color('white');
         width: 320px;
-        margin-bottom: 22px;
+        margin: 0 0 22px;
 
         .filter-option-cost {
           width: 160px;
@@ -123,9 +120,8 @@
       }
 
       .slider-container {
-        margin: 0;
         padding: 0;
-        margin-bottom: 34px;
+        margin: 0 0 34px;
       }
     }
   }
