--- a/sass/pages/_index.scss
+++ b/sass/pages/_index.scss
@@ -55,8 +55,7 @@
       h3 {
         position: relative;
         font-size: 21px;
-        margin: 0;
-        margin-bottom: 24px;
+        margin: 0 0 24px;
         padding: 0;
       }
 
