--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -1,7 +1,7 @@
 .appointment-form {
   width: 570px;
   margin: 0;
-  padding: 55px 55px;
+  padding: 55px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -15,7 +15,7 @@
     width: 346px;
     height: 38px;
     margin-left: 20px;
-    background-color: color('textfield-container');
+    background-color: color("textfield-container");
   }
 
   input[type="text"] {
@@ -36,8 +36,8 @@
 
   .filter {
     display: flex;
-    color: color('white');
-    background-color: color('white');
+    color: color("white");
+    background-color: color("black");
     background-image: url("../img/filter-bg.jpg");
     background-position: top center;
     background-repeat: no-repeat;
@@ -94,7 +94,7 @@
         display: flex;
         list-style: none;
         padding: 0;
-        border: 2px solid color('white');
+        border: 2px solid color("white");
         width: 320px;
         margin: 0 0 22px;
 
@@ -108,13 +108,13 @@
           }
 
           &:first-child::after {
-            content: '';
+            content: "";
             position: absolute;
             left: 100%;
             top: 3px;
             bottom: 3px;
             width: 2px;
-            background: color('white');
+            background: color("white");
           }
         }
       }
