--- a/sass/pages/_index.scss
+++ b/sass/pages/_index.scss
@@ -145,6 +145,7 @@
 }
 
 .appointment-info {
+
   h2 {
     font-size: 30px;
     line-height: 36px;
@@ -152,7 +153,7 @@
   }
 
   p {
-    color: color('gray');
+    color: color("gray");
     line-height: 24px;
     margin-bottom: 43px;
   }
